fixed wrapping on images

--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ margin-bottom: 1em;
 .alignright{
   float: right;
     margin-top: 2em;
-    margin-right: 3em;
+    margin-left: 3em;
     margin-bottom: 2em;
 }
 
